# EmbeddedLinux

./: .gitignore
C++/Session 06/: Task_2.cpp  Task_4.cpp  Task_5.cpp  Task_6.cpp
C++/Session 07/: Task_1.cpp  Task_3.cpp  Task_4.cpp  Task_5.cpp  include_file.hpp
C++/Session 08/: Task_4.cpp
C++/Session 09/: Task_2.cpp  log_main.cpp  logger.hpp
C++/Session 10/: multi_level_inherit.cpp
C++/Session 10/Uart_debuger/: main.cpp
C++/Session 11/: controlPC.cpp
C++/Session 11/src/: client_handler.cpp  server.cpp
C++/Session 12/: async2.cpp  exception.cpp  future_promise.cpp  hello_threads.cpp
Linux/Session 13/: CMakeLists.txt  CMakePresets.json  main.cpp
Linux/Session 13/myLib/: CMakeLists.txt  mylib.cpp  mylib.hpp
Python/Session 01/: Task_1.py  Task_2.py  test.py
Python/Session 02/: Task_2.py
Python/Session 03/: Task_3.py
Session 1/: Task_3.py  test.py
Session 11/: CMakeLists.txt
Session 11/include/: client_handler.hpp  server.hpp
Session 11/src/: CMakeLists.txt
Session 12/: async.cpp  mutex.cpp  packaged_task.cpp  thread1.cpp
Session 2/: Task_1.py  Task_2.py
Session 3/: Task_1.py  Task_2.py  Task_3.py
Session 5/src/: main.py
Session 6/: Task_1.cpp  Task_2.cpp  Task_3.cpp  Task_4.cpp  Task_5.cpp  Task_6.cpp  Task_7.cpp  a.out
Session 7/: Task_1.cpp  Task_2.cpp  Task_3.cpp  Task_4.cpp  Task_5.cpp  include_file.hpp
Session 8/: Task_1.cpp  Task_2.hpp  Task_3.cpp  Task_4.cpp  backtrace.cpp  backtrace.hpp
Session 9/: logger.cpp  logger.hpp
